fix(Messages.scss): wrap long strings in messages

--- a/src/components/Messages.scss
+++ b/src/components/Messages.scss
@@ -27,6 +27,7 @@ https://www.gnu.org/licenses/gpl-3.0.html
     max-width: 50%;
     padding: 1px 10px;
     margin: 10px;
+    overflow-wrap: anywhere;
 
     // differences (color and location)
     align-self: $alignment;
